changed spelling and added links to top

--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,3 +1,11 @@
-# Hi, I'm Jane Doe
+# Hi, I'm Fredrik Widegren
 
-I'm creating noice web experiences for the next generation of consumer-facing companies
+I'm studying Front End Development @ Medieinstitutet in Malmö.
+
+JavaScript | React | Node | Express | Git | And more.
+
+Send me an email @ <Fredrik.widegren@gmail.com> and we'll talk! 
+
+check out my [GitHub](https://github.com/Fredrikwide?tab=repositories) and [LinkedIn](https://www.linkedin.com/in/fredrik-widegren-b5044413b/) 
+
+Further down is just more of the same as above. No need to scroll. 
