updated text placement

--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,11 +1,9 @@
 # Hi, I'm Fredrik Widegren
 
-I'm studying Front End Development @ Medieinstitutet in Malmö.
+##### I'm studying Front End Development @ Medieinstitutet in Malmö, Sweden.
 
-JavaScript | React | Node | Express | Git | And more.
+###### JavaScript | React | Node | Express | Git | And more.
+
+Check out my [GitHub](https://github.com/Fredrikwide?tab=repositories) and [LinkedIn](https://www.linkedin.com/in/fredrik-widegren-b5044413b/) 
 
 Send me an email @ <Fredrik.widegren@gmail.com> and we'll talk! 
-
-check out my [GitHub](https://github.com/Fredrikwide?tab=repositories) and [LinkedIn](https://www.linkedin.com/in/fredrik-widegren-b5044413b/) 
-
-Further down is just more of the same as above. No need to scroll. 
